--- a/src/main/res/layout/new_person_form.xml
+++ b/src/main/res/layout/new_person_form.xml
@@ -7,35 +7,56 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:orientation="vertical">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Welcome to C3!"
+        android:id="@+id/textView3"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="10dp"/>
+
     <EditText
         android:hint="Enter Name..."
-        android:id="@+id/name"
+        android:id="@+id/nameField"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
     <EditText
         android:hint="Enter Email..."
-        android:id="@+id/email"
+        android:id="@+id/emailField"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Enter/Check your UID"
+        android:id="@+id/uid"
+        android:layout_marginTop="10dp"/>
 
     <EditText
-        android:id="@+id/uid"
+        android:id="@+id/uidField"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="phone" />
 
     <TextView
-        android:text="Rate your Experience"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"/>
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Rate your Experience"
+        android:id="@+id/textView2"
+        android:layout_marginTop="10dp"/>
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center_horizontal">
+                android:gravity="center_horizontal"
+                android:id="@+id/experience">
         <RadioButton android:id="@+id/eOne"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
@@ -69,11 +90,19 @@
         android:layout_height="wrap_content"
         android:textSize="20dp"/>
 
-    <Button
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Submit"
-        android:id="@+id/submit"
-        android:layout_gravity="center"/>
+        android:layout_height="match_parent">
+        <Button
+            android:text="Submit"
+            android:id="@+id/submitPerson"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            />
+    </RelativeLayout>
 
 </LinearLayout>
