--- a/src/main/res/layout/new_person_form.xml
+++ b/src/main/res/layout/new_person_form.xml
@@ -41,7 +41,7 @@
         android:id="@+id/uidField"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:inputType="phone" />
+        android:inputType="number" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -60,28 +60,23 @@
         <RadioButton android:id="@+id/eOne"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
-                     android:text="1"
-                     android:onClick="onRadioButtonClicked"/>
+                     android:text="1"/>
         <RadioButton android:id="@+id/eTwo"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
-                     android:text="2"
-                     android:onClick="onRadioButtonClicked"/>
+                     android:text="2"/>
         <RadioButton android:id="@+id/eThree"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
-                     android:text="3"
-                     android:onClick="onRadioButtonClicked"/>
+                     android:text="3"/>
         <RadioButton android:id="@+id/eFour"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
-                     android:text="4"
-                     android:onClick="onRadioButtonClicked"/>
+                     android:text="4"/>
         <RadioButton android:id="@+id/eFive"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
-                     android:text="5"
-                     android:onClick="onRadioButtonClicked"/>
+                     android:text="5"/>
     </RadioGroup>
 
     <TextView
@@ -89,8 +84,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"/>
-
-
 
     <RelativeLayout
         android:layout_width="match_parent"
