--- a/src/main/res/layout/people_list.xml
+++ b/src/main/res/layout/people_list.xml
@@ -1,6 +1,36 @@
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="New Text"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/people"></TextView>
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Clear people.csv"
+        android:id="@+id/clearcsv"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Clear Signed In"
+        android:id="@+id/clearsignedin"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="View Signed In"
+        android:id="@+id/viewsignedin"/>
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="View File Contents"
+        android:id="@+id/view_file_contents"
+        android:layout_gravity="center_horizontal"/>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/people"/>
+</LinearLayout>
