--- a/src/main/res/layout/manual_uid_entry.xml
+++ b/src/main/res/layout/manual_uid_entry.xml
@@ -13,6 +13,6 @@
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="@string/submit"
         android:id="@+id/submitManualId"/>
 </LinearLayout>
