--- a/src/main/res/layout/manual_uid_entry.xml
+++ b/src/main/res/layout/manual_uid_entry.xml
@@ -23,6 +23,22 @@
         android:inputType="number"
         android:layout_marginBottom="10dp"/>
 
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint="@string/preference1"
+        android:ems="10"
+        android:id="@+id/pref1"/>
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint="@string/preference2"
+        android:ems="10"
+        android:id="@+id/pref2"/>
+
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
@@ -33,5 +49,6 @@
             android:text="@string/submit"
             android:id="@+id/submitManualId"
             android:layout_alignParentBottom="true"/>
+
     </RelativeLayout>
 </LinearLayout>
