--- a/src/main/res/layout/new_person_form.xml
+++ b/src/main/res/layout/new_person_form.xml
@@ -1,11 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,7 +20,7 @@
         android:hint="Enter Name..."
         android:id="@+id/nameField"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
     <EditText
         android:hint="Enter Email..."
@@ -41,13 +41,13 @@
         android:id="@+id/uidField"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:inputType="number" />
+        android:inputType="number"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Rate your Experience"
+        android:text="@string/rate"
         android:id="@+id/textView2"
         android:layout_marginTop="10dp"/>
 
@@ -57,45 +57,58 @@
                 android:orientation="horizontal"
                 android:gravity="center_horizontal"
                 android:id="@+id/experience">
-        <RadioButton android:id="@+id/eOne"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="1"/>
-        <RadioButton android:id="@+id/eTwo"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="2"/>
-        <RadioButton android:id="@+id/eThree"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="3"/>
-        <RadioButton android:id="@+id/eFour"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="4"/>
-        <RadioButton android:id="@+id/eFive"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="5"/>
+
+        <RadioButton
+            android:id="@+id/eOne"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"/>
+
+        <RadioButton
+            android:id="@+id/eTwo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2"/>
+
+        <RadioButton
+            android:id="@+id/eThree"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3"/>
+
+        <RadioButton
+            android:id="@+id/eFour"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="4"/>
+
+        <RadioButton
+            android:id="@+id/eFive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5"/>
     </RadioGroup>
 
     <TextView
-        android:text="If you aren't sure, choose your year."
+        android:text="@string/unsure"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"/>
+        android:textSize="20sp"
+        android:layout_marginBottom="10dp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <Button
-            android:text="Submit"
+            android:text="@string/submit"
             android:id="@+id/submitPerson"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             />
+
     </RelativeLayout>
 
 </LinearLayout>
