--- a/src/main/res/layout/fragment_teams.xml
+++ b/src/main/res/layout/fragment_teams.xml
@@ -10,12 +10,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Just Click It!"
+        android:text="@string/click_it"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"/>
 
     <Button
@@ -31,10 +31,9 @@
         android:id="@+id/fileContents"
         android:layout_gravity="center_horizontal"/>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/teamText">
-    </LinearLayout>
+        android:id="@+id/teamView">
+    </ScrollView>
 </LinearLayout>
