--- a/src/main/res/layout/signed_in.xml
+++ b/src/main/res/layout/signed_in.xml
@@ -1,4 +1,20 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/listview"
-          android:layout_width="fill_parent"
-          android:layout_height="wrap_content"/>
+<RelativeLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/clear_all"
+        android:id="@+id/clearSignedIn"
+        android:layout_alignParentBottom="true"/>
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:id="@+id/listView"
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/clearSignedIn"/>
+
+</RelativeLayout>
